[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/BoardSetup/BoardSetup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Temp/LevelScript.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Quiz/Quiz.tscn" type="PackedScene" id=3]

[node name="Level1" type="Node"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -112, -80 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="BoardSetup" parent="." instance=ExtResource( 1 )]

[node name="BoardBackground" parent="BoardSetup" index="0"]
tile_data = PoolIntArray( -458764, 0, 131073, -458763, 0, 131072, -458762, 0, 131073, -458761, 0, 131072, -458760, 0, 131073, -458759, 0, 131072, -458758, 0, 131073, -458757, 0, 131072, -458756, 0, 131073, -458755, 0, 131072, -393228, 0, 131072, -393227, 0, 131073, -393226, 0, 131072, -393225, 0, 131073, -393224, 0, 131072, -393223, 0, 131073, -393222, 0, 131072, -393221, 0, 131073, -393220, 0, 131072, -393219, 0, 131073, -327692, 0, 131073, -327691, 0, 131072, -327690, 0, 131073, -327689, 0, 131072, -327688, 0, 131073, -327687, 0, 131072, -327686, 0, 131073, -327685, 0, 131072, -327684, 0, 131073, -327683, 0, 131072, -262156, 0, 131072, -262155, 0, 131073, -262154, 0, 131072, -262153, 0, 131073, -262152, 0, 131072, -262151, 0, 131073, -262150, 0, 131072, -262149, 0, 131073, -262148, 0, 131072, -262147, 0, 131073, -196620, 0, 131073, -196619, 0, 131072, -196618, 0, 131073, -196617, 0, 131072, -196616, 0, 131073, -196615, 0, 131072, -196614, 0, 131073, -196613, 0, 131072, -196612, 0, 131073, -196611, 0, 131072, -131084, 0, 131072, -131083, 0, 131073, -131082, 0, 131072, -131081, 0, 131073, -131080, 0, 131072, -131079, 0, 131073, -131078, 0, 131072, -131077, 0, 131073, -131076, 0, 131072, -131075, 0, 131073 )

[node name="BoardBorder" parent="BoardSetup" index="1"]
tile_data = PoolIntArray( -1048601, 0, 0, -1048600, 0, 1, -1048599, 0, 131076, -1048598, 0, 131076, -1048597, 0, 1, -1048596, 0, 131076, -1048595, 0, 1, -1048594, 0, 1, -1048593, 0, 131076, -1048592, 0, 1, -1048591, 0, 131076, -1048590, 0, 1, -1048589, 0, 131076, -1048588, 0, 131076, -1048587, 0, 131076, -1048586, 0, 131076, -1048585, 0, 1, -1048584, 0, 1, -1048583, 0, 1, -1048582, 0, 1, -1048581, 0, 131076, -1048580, 0, 2, -983065, 0, 65536, -983064, 0, 65537, -983063, 0, 65537, -983062, 0, 65537, -983061, 0, 65537, -983060, 0, 65537, -983059, 0, 65537, -983058, 0, 65537, -983057, 0, 65537, -983056, 0, 65537, -983055, 0, 65537, -983054, 0, 65537, -983053, 0, 65537, -983052, 0, 65537, -983051, 0, 65537, -983050, 0, 65537, -983049, 0, 65537, -983048, 0, 65537, -983047, 0, 65537, -983046, 0, 65537, -983045, 0, 65537, -983044, 0, 65539, -917529, 0, 65536, -917528, 0, 65537, -917527, 0, 65537, -917526, 0, 65537, -917525, 0, 65537, -917524, 0, 65537, -917523, 0, 65537, -917522, 0, 65537, -917521, 0, 65537, -917520, 0, 65537, -917519, 0, 65537, -917518, 0, 65537, -917517, 0, 65537, -917516, 0, 65537, -917515, 0, 65537, -917514, 0, 65537, -917513, 0, 65537, -917512, 0, 65537, -917511, 0, 65537, -917510, 0, 65537, -917509, 0, 65537, -917508, 0, 65538, -851993, 0, 65536, -851992, 0, 65537, -851991, 0, 65537, -851990, 0, 65537, -851989, 0, 65537, -851988, 0, 65537, -851987, 0, 65537, -851986, 0, 65537, -851985, 0, 65537, -851984, 0, 65537, -851983, 0, 65537, -851982, 0, 65537, -851981, 0, 65537, -851980, 0, 65537, -851979, 0, 65537, -851978, 0, 65537, -851977, 0, 65537, -851976, 0, 65537, -851975, 0, 65537, -851974, 0, 65537, -851973, 0, 65537, -851972, 0, 65538, -786457, 0, 65536, -786456, 0, 65537, -786455, 0, 65537, -786454, 0, 65537, -786453, 0, 65537, -786452, 0, 65537, -786451, 0, 65537, -786450, 0, 65537, -786449, 0, 65537, -786448, 0, 65537, -786447, 0, 65537, -786446, 0, 65537, -786445, 0, 65537, -786444, 0, 65537, -786443, 0, 65537, -786442, 0, 65537, -786441, 0, 65537, -786440, 0, 65537, -786439, 0, 65537, -786438, 0, 65537, -786437, 0, 65537, -786436, 0, 65539, -720921, 0, 65541, -720920, 0, 65537, -720919, 0, 65537, -720918, 0, 65537, -720917, 0, 65537, -720916, 0, 65537, -720915, 0, 65537, -720914, 0, 65537, -720913, 0, 65537, -720912, 0, 65537, -720911, 0, 65537, -720910, 0, 65537, -720909, 0, 65537, -720908, 0, 65537, -720907, 0, 65537, -720906, 0, 65537, -720905, 0, 65537, -720904, 0, 65537, -720903, 0, 65537, -720902, 0, 65537, -720901, 0, 65537, -720900, 0, 65539, -655385, 0, 65541, -655384, 0, 65537, -655383, 0, 65537, -655382, 0, 65537, -655381, 0, 65537, -655380, 0, 65537, -655379, 0, 65537, -655378, 0, 65537, -655377, 0, 65537, -655376, 0, 65537, -655375, 0, 65537, -655374, 0, 65537, -655373, 0, 65537, -655372, 0, 65537, -655371, 0, 65537, -655370, 0, 65537, -655369, 0, 65537, -655368, 0, 65537, -655367, 0, 65537, -655366, 0, 65537, -655365, 0, 65537, -655364, 0, 65539, -589849, 0, 65541, -589848, 0, 65537, -589847, 0, 65537, -589846, 0, 65537, -589845, 0, 65537, -589844, 0, 65537, -589843, 0, 65537, -589842, 0, 65537, -589841, 0, 65537, -589840, 0, 65537, -589839, 0, 65537, -589838, 0, 65537, -589837, 0, 65537, -589836, 0, 65537, -589835, 0, 65537, -589834, 0, 65537, -589833, 0, 65537, -589832, 0, 65537, -589831, 0, 65537, -589830, 0, 65537, -589829, 0, 65537, -589828, 0, 65539, -524313, 0, 65541, -524312, 0, 65537, -524311, 0, 65537, -524310, 0, 65537, -524309, 0, 65537, -524308, 0, 65537, -524307, 0, 65537, -524306, 0, 65537, -524305, 0, 65537, -524304, 0, 65537, -524303, 0, 65537, -524302, 0, 65537, -524301, 0, 65537, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 0, 65537, -524296, 0, 65537, -524295, 0, 65537, -524294, 0, 65537, -524293, 0, 65537, -524292, 0, 65539, -458777, 0, 65536, -458776, 0, 65537, -458775, 0, 65537, -458774, 0, 65537, -458773, 0, 65537, -458772, 0, 65537, -458771, 0, 65537, -458770, 0, 65537, -458769, 0, 65537, -458768, 0, 65537, -458767, 0, 65537, -458766, 0, 65537, -458765, 0, 65537, -458764, 0, 65537, -458763, 0, 65537, -458762, 0, 65537, -458761, 0, 65537, -458760, 0, 65537, -458759, 0, 65537, -458758, 0, 65537, -458757, 0, 65537, -458756, 0, 65538, -393241, 0, 65536, -393240, 0, 65537, -393239, 0, 65537, -393238, 0, 65537, -393237, 0, 65537, -393236, 0, 65537, -393235, 0, 65537, -393234, 0, 65537, -393233, 0, 65537, -393232, 0, 65537, -393231, 0, 65537, -393230, 0, 65537, -393229, 0, 65537, -393228, 0, 65537, -393227, 0, 65537, -393226, 0, 65537, -393225, 0, 65537, -393224, 0, 65537, -393223, 0, 65537, -393222, 0, 65537, -393221, 0, 65537, -393220, 0, 65539, -327705, 0, 65541, -327704, 0, 65537, -327703, 0, 65537, -327702, 0, 65537, -327701, 0, 65537, -327700, 0, 65537, -327699, 0, 65537, -327698, 0, 65537, -327697, 0, 65537, -327696, 0, 65537, -327695, 0, 65537, -327694, 0, 65537, -327693, 0, 65537, -327692, 0, 65537, -327691, 0, 65537, -327690, 0, 65537, -327689, 0, 65537, -327688, 0, 65537, -327687, 0, 65537, -327686, 0, 65537, -327685, 0, 65537, -327684, 0, 65538, -262169, 0, 65536, -262168, 0, 65537, -262167, 0, 65537, -262166, 0, 65537, -262165, 0, 65537, -262164, 0, 65537, -262163, 0, 65537, -262162, 0, 65537, -262161, 0, 65537, -262160, 0, 65537, -262159, 0, 65537, -262158, 0, 65537, -262157, 0, 65537, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 65539, -196633, 0, 131072, -196632, 0, 4, -196631, 0, 4, -196630, 0, 4, -196629, 0, 131073, -196628, 0, 4, -196627, 0, 131073, -196626, 0, 131073, -196625, 0, 131073, -196624, 0, 131073, -196623, 0, 4, -196622, 0, 4, -196621, 0, 131073, -196620, 0, 4, -196619, 0, 131073, -196618, 0, 4, -196617, 0, 131073, -196616, 0, 4, -196615, 0, 4, -196614, 0, 4, -196613, 0, 4, -196612, 0, 131074 )

[node name="InteractableObjects" parent="BoardSetup" index="3"]
tile_data = PoolIntArray( -458764, 0, 0, -458763, 5, 0, -458762, 4, 0, -458761, 4, 0, -458760, 4, 0, -458759, 4, 0, -458758, 4, 0, -458757, 4, 0, -458756, 4, 0, -458755, 4, 0, -393228, 4, 0, -393226, 4, 0, -393221, 5, 0, -393219, 4, 0, -327692, 4, 0, -327690, 4, 0, -327685, 1, 0, -327683, 4, 0, -262156, 4, 0, -262155, 2, 0, -262154, 4, 0, -262153, 2, 0, -262152, 4, 0, -262151, 4, 0, -262150, 4, 0, -262149, 4, 0, -262148, 5, 0, -262147, 4, 0, -196620, 4, 0, -196618, 5, 0, -196613, 4, 0, -196611, 4, 0, -131084, 4, 0, -131083, 4, 0, -131082, 4, 0, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0 )

[node name="SpecialTiles" type="Node2D" parent="BoardSetup"]

[node name="QuizPanel" parent="." instance=ExtResource( 3 )]
layer = 7
visible = false

[editable path="BoardSetup"]
